# pii-pseudonymizer

./: .gitignore  BEGINNERS_GUIDE.md  CLAUDE.md  Makefile  README.md  config.json  pyproject.toml  setup.cfg
src/pii_pseudonymizer/: __init__.py  cli.py  config.py  decoder.py  decrypt_gui.py  detector.py  heuristics.py  obfuscator.py  ollama_client.py  reader.py  transforms.py  tui.py
tests/: test_cell_exclusions.py  test_config.py  test_detector.py  test_gui.py  test_heuristics.py  test_obfuscator.py  test_phase4.py  test_roundtrip.py  test_transforms.py
