[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-pseudonymizer"
version = "0.2.0"
description = "Detect and reversibly pseudonymize PII in Excel files"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "openpyxl>=3.1",
    "cryptography>=41.0",
    "requests>=2.31",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
pii-pseudonymizer = "pii_pseudonymizer.cli:main"
pii-decrypt-gui = "pii_pseudonymizer.decrypt_gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability)
]

[tool.ruff.lint.isort]
known-first-party = ["pii_pseudonymizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
